Fixed z-index on PiP

--- a/TangerineUI-purple.css
+++ b/TangerineUI-purple.css
@@ -6583,6 +6583,7 @@ a:is(.active,
 
 /* 🖼️ Picture in Picture */
 .app-body .picture-in-picture {
+    z-index: 3;
     box-shadow: 0 0 5px rgba(0, 0, 0, .2);
     border-radius: 8px;
     border: 1px solid var(--color-lines);
